Fix image viewer background opacity on light theme
It's way too dark with 95%

--- a/res/themes/light/css/_light.pcss
+++ b/res/themes/light/css/_light.pcss
@@ -289,7 +289,7 @@ $eventbubble-reply-color: $quaternary-content;
    it hardcoded to the following value */
 $lightbox-fg-color: #fff;
 $lightbox-background-bg-color: #000;
-$lightbox-background-bg-opacity: 0.95;
+$lightbox-background-bg-opacity: 0.85;
 /* ******************** */
 
 /* VoIP */
